objects/FieloEE__Rule__c.object
<CustomObject>
    <description>Rules that determine the points a member earns with a transaction.</description>
    <fields>
        <fullName>FieloEE__ActionDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__ConvertionTypeReward__c</fullName>
        <label>Convertion Type Reward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fix Value</fullName>
                </value>
                <value>
                    <fullName>Reward Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__ConvertionTypeTransaction__c</fullName>
        <label>Convertion Type Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fix Value</fullName>
                </value>
                <value>
                    <fullName>Factor</fullName>
                </value>
                <value>
                    <fullName>Multiplier</fullName>
                    <default>true</default>
                    <label>Multiplier</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__ConvertionValue__c</fullName>
        <label>Convertion Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>A description of this rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description for this rule.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationMonth__c</fullName>
        <description>The number of months during which the points created by this rule will be valid.</description>
        <inlineHelpText>Enter the number of months during which the points created by the rule will remain vaild.</inlineHelpText>
        <label>Months untill Expiration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldNameReward__c</fullName>
        <defaultValue>&quot;Value__c&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name Reward</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__FieldNameTransaction__c</fullName>
        <defaultValue>&quot;Value__c&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name Transaction</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__InstantReward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instant Reward</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__Reward__c.FieloEE__isInstantReward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the rule active.</description>
        <inlineHelpText>Check this option in order to activate this rule.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this rule belongs.</description>
        <inlineHelpText>Select the program to which this rule belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__StockControl__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make that a transaction is not processed if its reward is out of stock. If left unchecked, the transaction will be processed although the reward can not be delivered.</description>
        <inlineHelpText>Check this option if you want that a transaction is not processed when its reward is out of stock.</inlineHelpText>
        <label>Stock Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <description>The type of this rule, which decides when the rule is applied.</description>
        <inlineHelpText>Choose when to use the given rule. &quot;Best Option&quot;: Among applicable rules,  the best option will be chosen. &quot;No Competition&quot;: This rule will always be applied.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Best Option</fullName>
                    <default>true</default>
                    <label>Best Option</label>
                </value>
                <value>
                    <fullName>No Competition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>FieloEE__All_Rules</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Description__c</columns>
        <columns>FieloEE__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule</pluralLabel>
    <recordTypes>
        <fullName>FieloEE__Default_Rule</fullName>
        <active>true</active>
        <label>Default Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Standard_Rule</fullName>
        <active>true</active>
        <label>Standard Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloEE__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloEE__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloEE__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Rule_Name_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name must be completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_points_value</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISPICKVAL(FieloEE__ConvertionTypeTransaction__c,&apos;Fix Value&apos;), ISPICKVAL(FieloEE__ConvertionTypeTransaction__c,&apos;Factor&apos;), ISPICKVAL(FieloEE__ConvertionTypeTransaction__c,&apos;Multiplier&apos;) ), OR(FieloEE__ConvertionValue__c == 0, ISNULL(FieloEE__ConvertionValue__c), ISBLANK(FieloEE__ConvertionValue__c)) )</errorConditionFormula>
        <errorMessage>The quantity of points cannot be empty or be 0</errorMessage>
    </validationRules>
</CustomObject>